@@ -1,5 +1,10 @@
 Revision history for Perl extension Net::SSLeay.
 
+????
+     Added support for TLSV1_1 and TLSV1_2 methods with SSL_CTX_tlsv1_1_new(),
+     SSL_CTX_tlsv1_2_new(), TLSv1_1_method() and TLSv1_2_method(), where
+     available in the underluying openssl.
+
 1.54 2013-03-23
      t/data/testcert_cdp.crt.pem_dump and t/data/testcert_cdp.crt.pem were
      missing from MANIFEST.
